drm/amdgpu: Fix incorrect return value in sysfs for pp_od_clk_voltage

The changes in edad8312cbbf9a33c86873fc4093664f150dd5c1 introduced an
issue with the sysfs interface for pp_od_clk_voltage. It overwrites the
return value to 0 when it calls another function, then returns 0. The
intended behavior is that a positive return value indicates the number
of bytes from the buffer that you processed in that call.

With the 0 return value, clients would submit the same value to be
written over and over again, resulting in an infinite loop.

This is resolved by returning the count of bytes read (in this case the
whole message), when the desired return is 0 (success).

Fixes: edad8312cbbf ("drm/amdgpu: fix system hang issue during GPU")
Bug: https://gitlab.freedesktop.org/drm/amd/-/issues/1245
Signed-off-by: Matt Coffin <mcoffin13@gmail.com>